# apex

./: .gitignore  BENCHMARK.md  BENCHMARK_COMPARISON.md  CHANGELOG.md  CMakeLists.txt  HOMEBREW.md  Makefile  README.md  RELEASE.md  fish-setup.md  generate_docset.rb  test.md  test_coverage.sh  test_index_mmark.md  test_index_mmark_output.html
.github/workflows/: release.yml
Formula/: apex.rb
build-release/: Makefile
build-test/: Makefile
cli/: main.c
docs/: API_REFERENCE.md  ARCHITECTURE.md  CMARK_INTEGRATION.md  CRITICMARKUP.md  FINAL_STATUS.md  FINAL_STATUS_UPDATE.md  FUTURE_FEATURES.md  IAL_FEATURES.md  IAL_STATUS.md  LIMITATIONS_RESOLVED.md  OUTPUT_MODES.md  PROGRESS.md  STANDALONE_FEATURE.md  TABLE_SPANS_STATUS.md  TEST_COVERAGE.md  USER_GUIDE.md  WIKI_LINKS_ISSUE.md
documentation/: README.md  generate_docset.rb  generate_single_html.rb
man/: apex-config.5  apex-config.5.md  apex-plugins.7  apex.1  apex.1.md
objc/: Apex.swift
src/: _README.md  apex.c  html_renderer.c  plugins.c  plugins_remote.c
tests/: CMakeLists.txt  README.md  advanced_tables_test.md  benchmark_comparison.sh  ial.md  test_basic.c  test_extensions.c  test_helpers.c  test_helpers.h  test_ial.c  test_links.c  test_metadata.c  test_output.c  test_runner.c  test_syntax_highlight.c  test_tables.c
tests/fixtures/: comprehensive_test.md
tests/fixtures/images/: pandoc_ial_image_test.md  width_height_conversion_test.md
tests/fixtures/output/: test_index_textindex.md
tests/fixtures/tables/: advanced_tables_test.md  inline_tables_test.md  table_cr_line_endings.md
(+49 files in other folders)
